WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93650
[BlackBerry] GCActivityCallback should always schedule GC even allocated bytes is a small number
https://bugs.webkit.org/show_bug.cgi?id=93650
Summary
[BlackBerry] GCActivityCallback should always schedule GC even allocated byte...
Yong Li
Reported
2012-08-09 13:43:01 PDT
GCActivityCallback should always schedule GC even allocated bytes is a small number
Attachments
the patch
(1.50 KB, patch)
2012-08-09 13:47 PDT
,
Yong Li
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yong Li
Comment 1
2012-08-09 13:47:38 PDT
Created
attachment 157537
[details]
the patch
Rob Buis
Comment 2
2012-08-09 14:37:59 PDT
Comment on
attachment 157537
[details]
the patch LGTM.
WebKit Review Bot
Comment 3
2012-08-09 15:53:06 PDT
Comment on
attachment 157537
[details]
the patch Rejecting
attachment 157537
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Websites/webkit.org/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13459725
WebKit Review Bot
Comment 4
2012-08-10 09:21:41 PDT
Comment on
attachment 157537
[details]
the patch Clearing flags on attachment: 157537 Committed
r125290
: <
http://trac.webkit.org/changeset/125290
>
WebKit Review Bot
Comment 5
2012-08-10 09:21:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug