[BlackBerry] GCActivityCallback should always schedule GC even allocated bytes is a small number https://bugs.webkit.org/show_bug.cgi?id=93650

Patch by Yong Li <yoli@rim.com> on 2012-08-10
Reviewed by Rob Buis.

Even a small number of allocated JS objects could hold expensive resources.

* runtime/GCActivityCallbackBlackBerry.cpp:
(JSC::DefaultGCActivityCallback::didAllocate):

git-svn-id: svn://svn.chromium.org/blink/trunk@125290 bbb929c8-8fbe-4397-9dbb-9b2b20218538