third_party/WebKit/Source/JavaScriptCore/runtime/GCActivityCallbackBlackBerry.cpp
@@ -26,8 +26,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace JSC {
 
-static const size_t bytesWorthGC = 4 * 1024 * 1024;
-
 DefaultGCActivityCallback::DefaultGCActivityCallback(Heap* heap)
     : GCActivityCallback(heap->globalData())
 {
@@ -41,7 +39,7 @@ void DefaultGCActivityCallback::doWork()
 
 void DefaultGCActivityCallback::didAllocate(size_t bytesAllocated)
 {
-    if (bytesAllocated < bytesWorthGC || m_timer.started())
+    if (m_timer.started())
         return;
 
     // Try using ~5% CPU time.
